[package]
name = "openjd-model"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Open Job Description model library — parsing, validation, and job creation"

[dependencies]
openjd-expr = { path = "../openjd-expr" }
indexmap = { version = "2", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
