[workspace]

[package]
name = "openjd_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["signal", "process", "poll"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
